# nonebot-plugin-bread-shop

./: LICENSE  README.md  pyproject.toml
nonebot_bread_shop/: __init__.py  bread_event.py  bread_handle.py  bread_operate.py  config.py
nonebot_plugin_bread_shop/: __init__.py  bread_event.py  bread_handle.py  bread_operate.py  config.py
