[tool.poetry]
name = "nonebot-plugin-bread-shop"
version = "0.1.9"
description = "nobebot2面包店插件"
authors = ["Mai Icy <maiicy@Foxmail.com>"]
license = "MIT"
keywords = ["nonebot", "nonebot2", "qqbot"]
readme = "README.md"
homepage = "https://github.com/Mai-icy/nonebot-plugin-bread-shop"
repository = "https://github.com/Mai-icy/nonebot-plugin-bread-shop"

[tool.poetry.dependencies]
python = "^3.7.7"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot2 = "^2.0.0-beta.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"